<resources>
    <string name="app_name">ShareLocation</string>
    <string name="title_activity_maps">Map</string>
    <string name="share_code">Поделиться местоположением</string>
    <string name="enter_code">Ввести код</string>
    <string name="settings">Настройка</string>
    <string name="action">Действия</string>
    <string name="share_code_title">Поделитесь этим кодом</string>
    <string name="generate_new_code">Сгенерировать новый код</string>
    <string name="enter_code_here">Введите код сюда</string>
    <string name="enter_code_btn">Проверить</string>
    <string name="share_code_incorrect">Данного кода не существует или у него истёк срок действия</string>
    <string name="code">Код</string>
    <string name="available">Активен</string>
    <string name="not_available">Не активен</string>
    <string name="offline">Не в сети</string>
    <string name="online">В сети</string>
    <string name="dont_my_code">Невозможно отслеживать самого себя</string>
    <string name="list_codes">Список отслеживаний</string>
    <string name="checked_location">Идет отслеживание местоположения</string>
    <string name="enable_send_location">Отслеживать местоположение</string>
    <string name="stop">Приостановить отслеживание</string>
    <string name="datetimeover">Ваш код истекает: %1$s</string>
    <string name="select_timeover">Выбрать дату истечения</string>
    <string name="share_description">Поделившись данным кодом, ваши друзья смогут наблюдать за вашим местоположением в реальном времени.</string>
    <string name="code_copied">Код скопирован</string>
    <string name="share_sharecode_description">Отследи моё местоположение, скачав приложение "ShareLocation" и введя код:</string>
    <string name="timeover_changed">Дата истечения изменена</string>
    <string name="title_changename">Смена ника</string>
    <string name="desc_changename">Введите желаемый ник</string>
    <string name="change">Изменить</string>
    <string name="cancel">Отмена</string>
    <string name="change_nick_to">Ник изменен на %1$s</string>
    <string name="map">Карта</string>
    <string name="enable_notification">Уведомление в шторке</string>
    <string name="enable_notification_desc">Отображается при отслеживании местоположения</string>
    <string name="app_password">Установить пароль на приложение</string>
    <string name="app_password_desc">Оставьте поле пустым чтобы удалить пароль</string>
    <string name="hide">Скрыть</string>
    <string name="enter_app_password">Введите пароль от приложения</string>
    <string name="password_incorrect">Пароль не верный</string>
    <string name="pass_length_error">Длинна пароля не может быть меньше 4 символов</string>
</resources>
