<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:title="@string/action">

        <item
            android:id="@+id/checked_location_item"
            android:icon="@android:drawable/ic_menu_mylocation"
            android:title="@string/enable_send_location"
            app:actionLayout="@layout/menu_switch"/>

        <item
            android:id="@+id/open_map"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/map"/>

        <item
            android:id="@+id/nav_share_code"
            android:icon="?attr/actionModeShareDrawable"
            android:title="@string/share_code" />
        <item
            android:id="@+id/nav_enter_code"
            android:icon="?attr/editTextBackground"
            android:title="@string/enter_code" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/settings" >
        </item>
    </group>
</menu>